# LittleDot

./: Action.cpp  Action.h  CMakeLists.txt  Card.cpp  Card.h  Discard.cpp  Discard.h  DiscardAction.cpp  DiscardAction.h  DrawAction.cpp  DrawAction.h  GameManager.cpp  GameManager.h  Pack.cpp  Pack.h  Player.cpp  Player.h  README.md  main.cpp
